--- a/src/styles/pages/projects.scss
+++ b/src/styles/pages/projects.scss
@@ -21,6 +21,7 @@
     display: flex;
     flex-flow: column nowrap;
 
+    justify-content: center;
     align-items: center;
 
     @media screen and (max-height: 950px) {
